# se-design-template

./: CMakeLists.txt  README.md
include/: ExprTree.h
lib/: CMakeLists.txt
lib/expr-ops/: CMakeLists.txt  ExprOps.cpp  ExprOps.h
lib/expr-tree/: CMakeLists.txt  ExprTree.h
lib/traversal/: CMakeLists.txt  Traversal.h
test/: CMakeLists.txt
test/expr-ops/: evaluation.cpp  operations.cpp  symbols.cpp
test/traverse/: exprs.cpp  stdlist.cpp
